# helios

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_PLAN.md  README.md  pyproject.toml  test_llm_connection.py
.github/: dependabot.yml
.github/workflows/: ci.yml
src/helios/: __init__.py  cli.py
src/helios/core/: __init__.py  chat.py  llm.py  types.py
src/helios/tools/: __init__.py  base.py  calculator.py  datetime_tool.py  registry.py  web_search.py
src/helios/utils/: config.py
tests/: conftest.py  test_chat.py  test_config.py  test_llm.py  test_tools.py  test_types.py
