[project]
name = "helios"
version = "0.1.0"
description = "An AI agent"
authors = [{name = "Kyle Olivo"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.54.0",              # OpenAI SDK (compatible with Open Router)
    "python-dotenv>=1.0.0",        # Environment variable management
    "pydantic>=2.10.0",            # Data validation and settings
    "pydantic-settings>=2.6.0",    # Settings management with Pydantic
    "rich>=13.9.0",                # Beautiful terminal output
    "click>=8.1.0",                # CLI framework
    "httpx>=0.28.0",               # Async HTTP client
    "duckduckgo-search>=7.0.0",    # Web search tool
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
helios = "helios.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helios"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
